# family-website

./: .env.example  .gitignore  LICENSE  Makefile  Package.resolved  Package.swift  README.md  animations.css  archives.html  authors.html  categories.html  docker-compose.yml  feed.rss  index.html  pyproject.toml  sitemap.xml  tags.html
.github/workflows/: pages.yml
.github/workflows/composite/build_base/: action.yml
Content/: index.md
Content/posts/: first-post.md
Data/: events.yml
Resources/Data/: animals.yml  people.yml
Sources/FamilyWebsite/: Configuration.swift  main.swift
Sources/FamilyWebsite/Models/: Animal.swift  Event.swift  Person.swift
Sources/FamilyWebsite/Services/: YamlLoader.swift
Sources/FamilyWebsite/Theme/: Theme.swift
Sources/FamilyWebsite/Theme/Partials/: AnimalsComponent.swift  EventsComponent.swift  FooterComponent.swift  PeopleComponent.swift  WelcomeComponent.swift
Sources/FamilyWebsite/Utilities/: PackageResources.swift
compose/: Dockerfile  entrypoint.sh
family_website/animal/: mapper.py  repository.py
family_website/core/: exception.py  mapper.py  repository.py  settings.py
family_website/data/: people.yml
family_website/event/: mapper.py  repository.py
family_website/person/: mapper.py  repository.py
family_website/themes/core/templates/partial/: people.html
src/animal/: repository.py
src/data/: people.yml
src/event/: repository.py
src/person/: mapper.py  repository.py
src/themes/core/templates/partial/: events.html  footer.html
tests/animal/: animal_mapper_test.py  animal_repository_test.py  conftest.py
tests/core/: mapper_test.py  repository_test.py
tests/event/: conftest.py  event_mapper_test.py  event_repository_test.py
tests/person/: conftest.py  person_mapper_test.py  person_repository_test.py
